--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "compare",
   "version": "1.0.0",
-  "description": "比较中英文文件，翻译出缺失的英文",
+  "description": "比较中英文文件获取缺失的 key",
   "dependencies": {},
   "devDependencies": {
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -16,4 +16,3 @@
   "author": "",
   "license": "ISC"
 }
-  console.log("🚀 ~ file: package.json:19 ~ 比较中英文文件，翻译出缺失的英文:", 比较中英文文件，翻译出缺失的英文)
